# HomeWork_8_Web

first/: main.py  models.py  pyproject.toml
second/: consumer.py  models.py  producer.py  pyproject.toml
