[tool.poetry]
name = "second"
version = "0.1.0"
description = ""
authors = ["fls0 <134416720+fls0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
faker = "^20.0.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
